--- a/JupyterNB-Python_v3.11/ML_PIPELINE_DEMO/clean_data.ipynb
+++ b/JupyterNB-Python_v3.11/ML_PIPELINE_DEMO/clean_data.ipynb
@@ -115,141 +115,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6f31094",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
-   "outputs": [],
-   "source": [
-    "def main(config_file=\"config.txt\", selected_file=None):\n",
-    "    # Open config file for user review\n",
-    "    if not open_config_file(config_file):\n",
-    "        print(\"Exiting due to missing or inaccessible config file.\")\n",
-    "        return\n",
-    "    paths = load_paths_and_suffix(config_file)\n",
-    "    input_folder = paths[\"input_folder\"]\n",
-    "    output_folder = paths[\"output_folder\"]\n",
-    "    cleaned_file_suffix = paths[\"cleaned_file_suffix\"]\n",
-    "\n",
-    "    if not os.path.exists(output_folder):\n",
-    "        os.makedirs(output_folder)\n",
-    "    \n",
-    "    # If no file specified, display available files and prompt for selection\n",
-    "    if selected_file is None:\n",
-    "        files = [f for f in os.listdir(input_folder) if f.endswith(\".csv\")]\n",
-    "        if not files:\n",
-    "            print(\"No files found in the training_data folder.\")\n",
-    "            return\n",
-    "        \n",
-    "        print(\"\\nAvailable files in training_data folder (please wait for a while for files to load):\")\n",
-    "        for i, file in enumerate(files, 1):\n",
-    "            print(f\"{i}. {file}\")\n",
-    "        \n",
-    "        try:\n",
-    "            choice = int(input(\"Enter the number of the file you want to clean: \"))\n",
-    "            if 1 <= choice <= len(files):\n",
-    "                selected_file = files[choice - 1]\n",
-    "            else:\n",
-    "                print(\"Invalid selection.\")\n",
-    "                return\n",
-    "        except ValueError:\n",
-    "            print(\"Please enter a valid number.\")\n",
-    "            return\n",
-    "\n",
-    "    input_path = os.path.join(input_folder, selected_file)\n",
-    "    data = pd.read_csv(input_path)\n",
-    "\n",
-    "    # Ask the user for columns to drop\n",
-    "    user_input = input(\"Enter the columns you want to drop, separated by commas or press Enter to skip: \")\n",
-    "    drop_columns = [\"Patient ID\"] \n",
-    "    if user_input:\n",
-    "        drop_columns += [col.strip() for col in user_input.split(\",\")]\n",
-    "\n",
-    "    # Ask the user if they want to add an empty target column\n",
-    "    add_target = input(\"Do you want to add an empty target column to this dataset? (yes/no): \").strip().lower() == \"yes\"\n",
-    "    target_column_name = \"target\"\n",
-    "    if add_target:\n",
-    "        target_column_name = input(\"Enter the name of the target column: \")\n",
-    "\n",
-    "    # Clean the data\n",
-    "    cleaned_data = clean_data(data, drop_columns=drop_columns, add_target=add_target, target_column_name=target_column_name)\n",
-    "\n",
-    "    # Save to the output folder cleaned_data\n",
-    "    output_filename = f\"cleaned_{selected_file.split('.')[0]}{cleaned_file_suffix}.csv\"\n",
-    "    output_path = os.path.join(output_folder, output_filename)\n",
-    "    cleaned_data.to_csv(output_path, index=False)\n",
-    "    print(f\"Saved cleaned data to {output_path}\")\n",
-    "\n",
-    "    # Reload the cleaned data for splitting\n",
-    "    cleaned_data = pd.read_csv(output_path)\n",
-    "\n",
-    "    # Ask the user if they want to split the data into training and testing sets\n",
-    "    split_data = input(\"Do you want to split the data into training and testing sets? (yes/no): \").strip().lower() == \"yes\"\n",
-    "    if split_data:\n",
-    "        try:\n",
-    "            # test_size = float(input(\"Enter the test size (e.g. 0.2 for 20% test size): \"))\n",
-    "            # random_state = int(input(\"Enter the random state for splitting: \"))\n",
-    "            # print(f\"Splitting data into training and testing sets with test size {test_size} and random state {random_state}...\")\n",
-    "            train_percentage = float(input(\"Enter the percentage for training data (e.g., 80 for 80%): \")) / 100\n",
-    "            validation_percentage = float(input(\"Enter the percentage for validation data (e.g., 10 for 10%): \")) / 100\n",
-    "            test_percentage = float(input(\"Enter the percentage for test data (e.g., 10 for 10%): \")) / 100\n",
-    "\n",
-    "            # Check if the percentages add up to 1 (or 100%)\n",
-    "            if not abs(train_percentage + validation_percentage + test_percentage - 1) < 1e-5:\n",
-    "                raise ValueError(\"Percentages must add up to 100%!\")\n",
-    "        except ValueError as e:\n",
-    "            # print(\"Invalid input. Using default test size of 0.2 and random state of 42.\")\n",
-    "            # test_size = 0.2\n",
-    "            # random_state = 42\n",
-    "            print(f\"Invalid input: {e}\")\n",
-    "            print(\"Using default split: 70% train, 15% validation, 15% test.\")\n",
-    "            train_percentage, validation_percentage, test_percentage = 0.7, 0.15, 0.15\n",
-    "\n",
-    "        # Split the data dynamically based on user input\n",
-    "        if validation_percentage == 0:\n",
-    "            # No validation set, split into training and testing only\n",
-    "            train_data, test_data = train_test_split(cleaned_data, test_size=test_percentage, random_state=42)\n",
-    "            validation_data = None  # No validation data\n",
-    "        else:\n",
-    "            # Perform the first split for training\n",
-    "            train_data, temp_data = train_test_split(cleaned_data, test_size=(validation_percentage + test_percentage), random_state=42)\n",
-    "\n",
-    "            # Split the remaining data into validation and test sets\n",
-    "            validation_data, test_data = train_test_split(temp_data, test_size=(test_percentage / (validation_percentage + test_percentage)), random_state=42)\n",
-    "                \n",
-    "        # Split the data into training and testing sets\n",
-    "        # train_data, test_data = train_test_split(cleaned_data, test_size=test_size, random_state=random_state)\n",
-    "        # Perform the first split to separate training data\n",
-    "        # train_data, temp_data = train_test_split(cleaned_data, test_size=(validation_percentage + test_percentage), random_state=42) # v1\n",
-    "\n",
-    "        # Split the remaining data into validation and test sets\n",
-    "        # validation_data, test_data = train_test_split(temp_data, test_size=(test_percentage / (validation_percentage + test_percentage)), random_state=42) # v1\n",
-    "\n",
-    "        # Generate filenames for the split datasets\n",
-    "        train_output_path = os.path.join(output_folder, f\"train_{selected_file.split('.')[0]}{cleaned_file_suffix}.csv\")\n",
-    "        test_output_path = os.path.join(output_folder, f\"test_{selected_file.split('.')[0]}{cleaned_file_suffix}.csv\")\n",
-    "        # validation_output_path = os.path.join(output_folder, f\"validation_{selected_file.split('.')[0]}{cleaned_file_suffix}.csv\")\n",
-    "\n",
-    "        # Save the split datasets\n",
-    "        train_data.to_csv(train_output_path, index=False)\n",
-    "        test_data.to_csv(test_output_path, index=False)\n",
-    "        # validation_data.to_csv(validation_output_path, index=False)\n",
-    "\n",
-    "        print(f\"Saved training data to {train_output_path}\")\n",
-    "        print(f\"Saved testing data to {test_output_path}\")\n",
-    "        # print(f\"Saved validation data to {validation_output_path}\")\n",
-    "\n",
-    "        if validation_data is not None:\n",
-    "            validation_output_path = os.path.join(output_folder, f\"validation_{selected_file.split('.')[0]}{cleaned_file_suffix}.csv\")\n",
-    "            validation_data.to_csv(validation_output_path, index=False)\n",
-    "            print(f\"Saved validation data to {validation_output_path}\")\n",
-    "    summary = generate_encoding_summary(data, cleaned_data)\n",
-    "    print_encoding_summary(summary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ee2c5d38",
    "metadata": {
     "lines_to_next_cell": 1
@@ -305,6 +170,117 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c6f31094",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Define paths and configuration\n",
+    "config_file = \"config.txt\"\n",
+    "\n",
+    "# Step 1: Open the configuration file for review\n",
+    "if not open_config_file(config_file):\n",
+    "    print(\"Exiting due to missing or inaccessible config file.\")\n",
+    "else:\n",
+    "    # Step 2: Load paths and suffix\n",
+    "    paths = load_paths_and_suffix(config_file)\n",
+    "    input_folder = paths[\"input_folder\"]\n",
+    "    output_folder = paths[\"output_folder\"]\n",
+    "    cleaned_file_suffix = paths[\"cleaned_file_suffix\"]\n",
+    "\n",
+    "    # Ensure the output folder exists\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
+    "\n",
+    "    # Step 3: List available files in the input folder\n",
+    "    files = [f for f in os.listdir(input_folder) if f.endswith(\".csv\")]\n",
+    "    if not files:\n",
+    "        print(\"No files found in the input folder.\")\n",
+    "    else:\n",
+    "        print(\"\\nAvailable files:\")\n",
+    "        for i, file in enumerate(files, 1):\n",
+    "            print(f\"{i}. {file}\")\n",
+    "\n",
+    "        # Step 4: Prompt user to select a file to clean\n",
+    "        try:\n",
+    "            choice = int(input(\"Enter the number of the file you want to clean: \"))\n",
+    "            if 1 <= choice <= len(files):\n",
+    "                selected_file = files[choice - 1]\n",
+    "            else:\n",
+    "                print(\"Invalid selection.\")\n",
+    "        except ValueError:\n",
+    "            print(\"Please enter a valid number.\")\n",
+    "\n",
+    "        input_path = os.path.join(input_folder, selected_file)\n",
+    "        data = pd.read_csv(input_path)\n",
+    "\n",
+    "        # Step 5: Ask for columns to drop\n",
+    "        user_input = input(\"Enter the columns you want to drop, separated by commas, or press Enter to skip: \")\n",
+    "        drop_columns = [\"Patient ID\"]\n",
+    "        if user_input:\n",
+    "            drop_columns += [col.strip() for col in user_input.split(\",\")]\n",
+    "\n",
+    "        # Step 6: Ask if an empty target column should be added\n",
+    "        add_target = input(\"Do you want to add an empty target column to this dataset? (yes/no): \").strip().lower() == \"yes\"\n",
+    "        target_column_name = \"target\"\n",
+    "        if add_target:\n",
+    "            target_column_name = input(\"Enter the name of the target column: \")\n",
+    "\n",
+    "        # Step 7: Clean the data\n",
+    "        cleaned_data = clean_data(data, drop_columns=drop_columns, add_target=add_target, target_column_name=target_column_name)\n",
+    "\n",
+    "        # Step 8: Save the cleaned data\n",
+    "        output_filename = f\"cleaned_{selected_file.split('.')[0]}{cleaned_file_suffix}.csv\"\n",
+    "        output_path = os.path.join(output_folder, output_filename)\n",
+    "        cleaned_data.to_csv(output_path, index=False)\n",
+    "        print(f\"Saved cleaned data to {output_path}\")\n",
+    "\n",
+    "        # Step 9: Split data into train/test/validation sets (optional)\n",
+    "        split_data = input(\"Do you want to split the data into training and testing sets? (yes/no): \").strip().lower() == \"yes\"\n",
+    "        if split_data:\n",
+    "            try:\n",
+    "                train_percentage = float(input(\"Enter the percentage for training data (e.g., 80 for 80%): \")) / 100\n",
+    "                validation_percentage = float(input(\"Enter the percentage for validation data (e.g., 10 for 10%): \")) / 100\n",
+    "                test_percentage = float(input(\"Enter the percentage for test data (e.g., 10 for 10%): \")) / 100\n",
+    "\n",
+    "                # Ensure percentages add up to 1 (100%)\n",
+    "                if not abs(train_percentage + validation_percentage + test_percentage - 1) < 1e-5:\n",
+    "                    raise ValueError(\"Percentages must add up to 100%!\")\n",
+    "            except ValueError as e:\n",
+    "                print(f\"Invalid input: {e}\")\n",
+    "                print(\"Using default split: 70% train, 15% validation, 15% test.\")\n",
+    "                train_percentage, validation_percentage, test_percentage = 0.7, 0.15, 0.15\n",
+    "\n",
+    "            if validation_percentage == 0:\n",
+    "                # Split into training and testing only\n",
+    "                train_data, test_data = train_test_split(cleaned_data, test_size=test_percentage, random_state=42)\n",
+    "                validation_data = None\n",
+    "            else:\n",
+    "                # Split into training, validation, and testing\n",
+    "                train_data, temp_data = train_test_split(cleaned_data, test_size=(validation_percentage + test_percentage), random_state=42)\n",
+    "                validation_data, test_data = train_test_split(temp_data, test_size=(test_percentage / (validation_percentage + test_percentage)), random_state=42)\n",
+    "\n",
+    "            # Save the split datasets\n",
+    "            train_output_path = os.path.join(output_folder, f\"train_{selected_file.split('.')[0]}{cleaned_file_suffix}.csv\")\n",
+    "            test_output_path = os.path.join(output_folder, f\"test_{selected_file.split('.')[0]}{cleaned_file_suffix}.csv\")\n",
+    "            train_data.to_csv(train_output_path, index=False)\n",
+    "            test_data.to_csv(test_output_path, index=False)\n",
+    "            print(f\"Saved training data to {train_output_path}\")\n",
+    "            print(f\"Saved testing data to {test_output_path}\")\n",
+    "\n",
+    "            if validation_data is not None:\n",
+    "                validation_output_path = os.path.join(output_folder, f\"validation_{selected_file.split('.')[0]}{cleaned_file_suffix}.csv\")\n",
+    "                validation_data.to_csv(validation_output_path, index=False)\n",
+    "                print(f\"Saved validation data to {validation_output_path}\")\n",
+    "\n",
+    "        # Step 10: Generate and print encoding summary\n",
+    "        summary = generate_encoding_summary(data, cleaned_data)\n",
+    "        print_encoding_summary(summary)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e2c8042d",
    "metadata": {},
    "outputs": [],
@@ -323,6 +299,23 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
