updated model training notebook

--- a/JupyterNB-Python_v3.11/ML_PIPELINE_DEMO/clean_data.ipynb
+++ b/JupyterNB-Python_v3.11/ML_PIPELINE_DEMO/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "33ef05f1",
    "metadata": {
     "lines_to_next_cell": 1
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d292d7de",
    "metadata": {
     "lines_to_next_cell": 1
@@ -58,6 +58,10 @@
     "\n",
     "def clean_data(data, drop_columns=None, add_target=False, target_column_name=\"target\"):\n",
     "    \"\"\"Cleans the data by dropping columns, adding BMI, and encoding categorical data.\"\"\"\n",
+    "    # If there is extra trailing delimiter, pandas will create an extra column 'Unnamed: 18'\n",
+    "    if 'Unnamed: 18' in data.columns:\n",
+    "        data = data.drop(columns=['Unnamed: 18'])\n",
+    "\n",
     "    if drop_columns:\n",
     "        data = data.drop(columns=drop_columns, errors=\"ignore\")\n",
     "    if \"Height\" in data.columns and \"Weight\" in data.columns:\n",
@@ -90,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c6f31094",
    "metadata": {
     "lines_to_next_cell": 1
@@ -107,10 +111,185 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Enter the number of the file you want to clean:  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected file: MS_2_Scenario_data.csv\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter additional columns to drop (comma-separated) or press Enter to skip:  \n",
+      "Add an empty target column? (yes/no):  no\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned data saved to: ../OTH_DATA/cleaned_data\\cleaned_MS_2_Scenario_data_TESTCASE3.csv\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Do you want to split the data into training and testing sets? (yes/no):  yes\n",
+      "Enter the percentage for training data (e.g., 80 for 80%):  70\n",
+      "Enter the percentage for validation data (e.g., 10 for 10%):  15\n",
+      "Enter the percentage for test data (e.g., 10 for 10%):  15\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved training data to ../OTH_DATA/cleaned_data\\train_MS_2_Scenario_data_TESTCASE3.csv\n",
+      "Saved testing data to ../OTH_DATA/cleaned_data\\test_MS_2_Scenario_data_TESTCASE3.csv\n",
+      "Saved validation data to ../OTH_DATA/cleaned_data\\validation_MS_2_Scenario_data_TESTCASE3.csv\n",
+      "\n",
+      "Column: Gender\n",
+      "  0 -> Female\n",
+      "  1 -> Male\n",
+      "\n",
+      "Column: fam_hist_over-wt\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: FAVC\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: CAEC\n",
+      "  0 -> Always\n",
+      "  1 -> Frequently\n",
+      "  2 -> Sometimes\n",
+      "  3 -> no\n",
+      "\n",
+      "Column: SMOKE\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: SCC\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: CALC\n",
+      "  0 -> Frequently\n",
+      "  1 -> Sometimes\n",
+      "  2 -> no\n",
+      "\n",
+      "Column: MTRANS\n",
+      "  0 -> Automobile\n",
+      "  1 -> Bike\n",
+      "  2 -> Motorbike\n",
+      "  3 -> Public_Transportation\n",
+      "  4 -> Walking\n",
+      "\n",
+      "Column: Obesity_Level\n",
+      "  0 -> Insufficient_Weight\n",
+      "  1 -> Normal_Weight\n",
+      "  2 -> Obesity_Type_I\n",
+      "  3 -> Obesity_Type_II\n",
+      "  4 -> Obesity_Type_III\n",
+      "  5 -> Overweight_Level_I\n",
+      "  6 -> Overweight_Level_II\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected file: MS_2_Scenario_data.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter additional columns to drop (comma-separated) or press Enter to skip:  \n",
+      "Add an empty target column? (yes/no):  no\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned data saved to: ../OTH_DATA/cleaned_data\\cleaned_MS_2_Scenario_data_TESTCASE3.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do you want to split the data into training and testing sets? (yes/no):  yes\n",
+      "Enter the percentage for training data (e.g., 80 for 80%):  80\n",
+      "Enter the percentage for validation data (e.g., 10 for 10%):  0\n",
+      "Enter the percentage for test data (e.g., 10 for 10%):  20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved training data to ../OTH_DATA/cleaned_data\\train_MS_2_Scenario_data_TESTCASE3.csv\n",
+      "Saved testing data to ../OTH_DATA/cleaned_data\\test_MS_2_Scenario_data_TESTCASE3.csv\n",
+      "\n",
+      "Column: Gender\n",
+      "  0 -> Female\n",
+      "  1 -> Male\n",
+      "\n",
+      "Column: fam_hist_over-wt\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: FAVC\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: CAEC\n",
+      "  0 -> Always\n",
+      "  1 -> Frequently\n",
+      "  2 -> Sometimes\n",
+      "  3 -> no\n",
+      "\n",
+      "Column: SMOKE\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: SCC\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: CALC\n",
+      "  0 -> Frequently\n",
+      "  1 -> Sometimes\n",
+      "  2 -> no\n",
+      "\n",
+      "Column: MTRANS\n",
+      "  0 -> Automobile\n",
+      "  1 -> Bike\n",
+      "  2 -> Motorbike\n",
+      "  3 -> Public_Transportation\n",
+      "  4 -> Walking\n",
+      "\n",
+      "Column: Obesity_Level\n",
+      "  0 -> Insufficient_Weight\n",
+      "  1 -> Normal_Weight\n",
+      "  2 -> Obesity_Type_I\n",
+      "  3 -> Obesity_Type_II\n",
+      "  4 -> Obesity_Type_III\n",
+      "  5 -> Overweight_Level_I\n",
+      "  6 -> Overweight_Level_II\n"
      ]
     },
     {
