--- a/JupyterNB-Python_v3.11/ML_PIPELINE_DEMO/clean_data.ipynb
+++ b/JupyterNB-Python_v3.11/ML_PIPELINE_DEMO/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "33ef05f1",
    "metadata": {
     "lines_to_next_cell": 1
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "d292d7de",
    "metadata": {
     "lines_to_next_cell": 1
@@ -56,22 +56,77 @@
     "    }\n",
     "    return paths\n",
     "\n",
+    "def calculate_body_fat(data):\n",
+    "    # Ensure BMI and Age exist in the dataset\n",
+    "    if 'BMI' not in data.columns or 'Age' not in data.columns:\n",
+    "        raise ValueError(\"The dataset must contain 'BMI' and 'Age' columns to calculate Body Fat.\")\n",
+    "\n",
+    "    # Check for missing values in required columns\n",
+    "    if data[['BMI', 'Age', 'Gender']].isnull().any().any():\n",
+    "        print(\"Warning: Missing values detected in 'BMI', 'Age', or 'Gender'. These rows will have NaN for Body Fat.\")\n",
+    "\n",
+    "    # Calculate Body Fat for Males (Gender == 1)\n",
+    "    data.loc[data['Gender'] == 1, 'Body_Fat'] = (\n",
+    "        1.20 * data['BMI'] + 0.23 * data['Age'] - 16.2\n",
+    "    )\n",
+    "    # Calculate Body Fat for Females (Gender == 0)\n",
+    "    data.loc[data['Gender'] == 0, 'Body_Fat'] = (\n",
+    "        1.20 * data['BMI'] + 0.23 * data['Age'] - 5.4\n",
+    "    )\n",
+    "    data['Body_Fat'] = data['Body_Fat'].round(2)\n",
+    "    return data\n",
+    "\n",
+    "# def clean_data(data, drop_columns=None, add_target=False, target_column_name=\"target\"):\n",
+    "#     \"\"\"Cleans the data by dropping columns, adding BMI, and encoding categorical data.\"\"\"\n",
+    "#     # If there is extra trailing delimiter, pandas will create an extra column 'Unnamed: 18'\n",
+    "#     if 'Unnamed: 18' in data.columns:\n",
+    "#         data = data.drop(columns=['Unnamed: 18'])\n",
+    "\n",
+    "#     if drop_columns:\n",
+    "#         data = data.drop(columns=drop_columns, errors=\"ignore\")\n",
+    "#     if \"Height\" in data.columns and \"Weight\" in data.columns:\n",
+    "#         data[\"BMI\"] = data[\"Weight\"] / (data[\"Height\"] ** 2)\n",
+    "#         data['BMI'] = data['BMI'].round(2)\n",
+    "#     if add_target and target_column_name not in data.columns:\n",
+    "#         data[target_column_name] = None\n",
+    "#     categorical_cols = data.select_dtypes(include=[\"object\"]).columns\n",
+    "#     for col in categorical_cols:\n",
+    "#         data[col] = data[col].astype(\"category\").cat.codes\n",
+    "#     return data\n",
+    "\n",
     "def clean_data(data, drop_columns=None, add_target=False, target_column_name=\"target\"):\n",
-    "    \"\"\"Cleans the data by dropping columns, adding BMI, and encoding categorical data.\"\"\"\n",
+    "    # Drop unnecessary columns\n",
     "    # If there is extra trailing delimiter, pandas will create an extra column 'Unnamed: 18'\n",
     "    if 'Unnamed: 18' in data.columns:\n",
     "        data = data.drop(columns=['Unnamed: 18'])\n",
     "\n",
+    "    # Drop user-specified columns\n",
     "    if drop_columns:\n",
-    "        data = data.drop(columns=drop_columns, errors=\"ignore\")\n",
-    "    if \"Height\" in data.columns and \"Weight\" in data.columns:\n",
-    "        data[\"BMI\"] = data[\"Weight\"] / (data[\"Height\"] ** 2)\n",
-    "        data['BMI'] = data['BMI'].round(2)\n",
+    "        data = data.drop(columns=drop_columns, errors='ignore')\n",
+    "        print(f\"Dropped columns: {drop_columns}\")\n",
+    "\n",
+    "    # Handle missing values, fill numerical columns with median\n",
+    "    for column in data.select_dtypes(include=['float64', 'int64']).columns:\n",
+    "        if data[column].isnull().sum() > 0:\n",
+    "            data[column].fillna(data[column].median(), inplace=True)\n",
+    "\n",
+    "    # Calculate BMI if Height and Weight columns are present\n",
+    "    if 'Height' in data.columns and 'Weight' in data.columns:\n",
+    "       data['BMI'] = data['Weight'] / ((data['Height']) ** 2)\n",
+    "       data['BMI'] = data['BMI'].round(2)\n",
+    "\n",
+    "    # Encoding categorical variables with numbers\n",
+    "    categorical_columns = data.select_dtypes(include=['object']).columns\n",
+    "    for column in categorical_columns:\n",
+    "        data[column] = data[column].astype('category').cat.codes\n",
+    "\n",
+    "    # Add an empty target column if requested for dataset with no target column\n",
     "    if add_target and target_column_name not in data.columns:\n",
     "        data[target_column_name] = None\n",
-    "    categorical_cols = data.select_dtypes(include=[\"object\"]).columns\n",
-    "    for col in categorical_cols:\n",
-    "        data[col] = data[col].astype(\"category\").cat.codes\n",
+    "        print(f\"Added an empty target column: '{target_column_name}'\")\n",
+    "\n",
+    "    data = calculate_body_fat(data)\n",
+    "    print(\"Data cleaning complete.\")\n",
     "    return data\n",
     "\n",
     "def generate_encoding_summary(original_data, encoded_data):\n",
@@ -94,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c6f31094",
    "metadata": {
     "lines_to_next_cell": 1
@@ -136,11 +191,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dropped columns: ['Patient ID']\n",
+      "Data cleaning complete.\n",
       "Cleaned data saved to: ../OTH_DATA/cleaned_data\\cleaned_MS_2_Scenario_data_TESTCASE3.csv\n"
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected file: MS_2_Scenario_data.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter additional columns to drop (comma-separated) or press Enter to skip:  \n",
+      "Add an empty target column? (yes/no):  no\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned data saved to: ../OTH_DATA/cleaned_data\\cleaned_MS_2_Scenario_data_TESTCASE3.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Do you want to split the data into training and testing sets? (yes/no):  no\n"
@@ -203,8 +282,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Selected file: MS_2_Scenario_data.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Enter additional columns to drop (comma-separated) or press Enter to skip:  \n",
       "Add an empty target column? (yes/no):  no\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned data saved to: ../OTH_DATA/cleaned_data\\cleaned_MS_2_Scenario_data_TESTCASE3.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do you want to split the data into training and testing sets? (yes/no):  no\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Column: Gender\n",
+      "  0 -> Female\n",
+      "  1 -> Male\n",
+      "\n",
+      "Column: fam_hist_over-wt\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: FAVC\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: CAEC\n",
+      "  0 -> Always\n",
+      "  1 -> Frequently\n",
+      "  2 -> Sometimes\n",
+      "  3 -> no\n",
+      "\n",
+      "Column: SMOKE\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: SCC\n",
+      "  0 -> no\n",
+      "  1 -> yes\n",
+      "\n",
+      "Column: CALC\n",
+      "  0 -> Frequently\n",
+      "  1 -> Sometimes\n",
+      "  2 -> no\n",
+      "\n",
+      "Column: MTRANS\n",
+      "  0 -> Automobile\n",
+      "  1 -> Bike\n",
+      "  2 -> Motorbike\n",
+      "  3 -> Public_Transportation\n",
+      "  4 -> Walking\n",
+      "\n",
+      "Column: Obesity_Level\n",
+      "  0 -> Insufficient_Weight\n",
+      "  1 -> Normal_Weight\n",
+      "  2 -> Obesity_Type_I\n",
+      "  3 -> Obesity_Type_II\n",
+      "  4 -> Obesity_Type_III\n",
+      "  5 -> Overweight_Level_I\n",
+      "  6 -> Overweight_Level_II\n"
      ]
     },
     {
