fixed confusion matrix graph

--- a/JupyterNB-Python_v3.11/ML_PIPELINE_DEMO/perform_prediction.ipynb
+++ b/JupyterNB-Python_v3.11/ML_PIPELINE_DEMO/perform_prediction.ipynb
@@ -293,7 +293,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "id": "ed252467",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix(cm, labels, output_path):\n",
+    "    # Increase the figure size\n",
+    "    plt.figure(figsize=(10, 8))  # Adjust size as needed\n",
+    "    \n",
+    "    # Create the confusion matrix plot\n",
+    "    disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=labels)\n",
+    "    disp.plot(cmap='viridis', xticks_rotation=90, values_format='d')  # Rotate x-axis labels and set format\n",
+    "\n",
+    "    # Adjust font size\n",
+    "    plt.title(\"Confusion Matrix\", fontsize=16)\n",
+    "    plt.xlabel(\"Predicted label\", fontsize=14)\n",
+    "    plt.ylabel(\"True label\", fontsize=14)\n",
+    "    plt.xticks(fontsize=12)\n",
+    "    plt.yticks(fontsize=12)\n",
+    "\n",
+    "    # Save and close the plot\n",
+    "    plt.tight_layout()  # Ensures everything fits without overlap\n",
+    "    plt.savefig(output_path)\n",
+    "    plt.close()\n",
+    "    print(f\"Confusion Matrix saved to {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a3de77bd",
    "metadata": {
     "lines_to_next_cell": 1
@@ -303,6 +332,27 @@
     "def evaluate_model(model, X_test, y_test, output_dir, feature_names):\n",
     "    y_pred = model.predict(X_test)\n",
     "    y_prob = model.predict_proba(X_test) if hasattr(model, \"predict_proba\") else None\n",
+    "\n",
+    "    # Define mappings\n",
+    "    combined_mappings = {\n",
+    "        \"Obesity_Level\": {\n",
+    "            0: \"Insufficient_Weight\",\n",
+    "            1: \"Normal_Weight\",\n",
+    "            2: \"Obesity_Type_I\",\n",
+    "            3: \"Obesity_Type_II\",\n",
+    "            4: \"Obesity_Type_III\",\n",
+    "            5: \"Overweight_Level_I\",\n",
+    "            6: \"Overweight_Level_II\"\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    # Decode labels to string form\n",
+    "    if y_test is not None:\n",
+    "        y_test_decoded = y_test.map(combined_mappings[\"Obesity_Level\"])\n",
+    "        y_pred_decoded = pd.Series(y_pred).map(combined_mappings[\"Obesity_Level\"])\n",
+    "    else:\n",
+    "        y_test_decoded = None\n",
+    "        y_pred_decoded = pd.Series(y_pred).map(combined_mappings[\"Obesity_Level\"])\n",
     "\n",
     "    # Call the feature importance plotting function\n",
     "    plot_feature_importances(model, output_dir)\n",
@@ -375,11 +425,9 @@
     "            plt.close()\n",
     "\n",
     "    # Confusion Matrix\n",
-    "    cm = confusion_matrix(y_test, y_pred)\n",
-    "    ConfusionMatrixDisplay(cm).plot()\n",
-    "    plt.title(\"Confusion Matrix\")\n",
-    "    plt.savefig(os.path.join(output_dir, \"confusion_matrix.png\"))\n",
-    "    plt.close()\n",
+    "    cm = confusion_matrix(y_test_decoded, y_pred_decoded, labels=list(combined_mappings[\"Obesity_Level\"].values()))\n",
+    "    output_cm_path = os.path.join(output_dir, \"confusion_matrix.png\")\n",
+    "    plot_confusion_matrix(cm, list(combined_mappings[\"Obesity_Level\"].values()), output_cm_path)\n",
     "\n",
     "    metrics = {\n",
     "        'accuracy': accuracy_score(y_test, y_pred),\n",
@@ -393,7 +441,8 @@
     "        'mae': mae,\n",
     "        'rmse': rmse,\n",
     "        'confusion_matrix': cm.tolist(),\n",
-    "        'classification_report': classification_report(y_test, y_pred, zero_division=0)\n",
+    "        # 'classification_report': classification_report(y_test, y_pred, zero_division=0)\n",
+    "        'classification_report': classification_report(y_test_decoded, y_pred_decoded, zero_division=0)\n",
     "    }\n",
     "\n",
     "    return metrics"
@@ -464,7 +513,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Select the file number to test the model on:  6\n"
@@ -491,7 +540,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter the model numbers to use for prediction (comma-separated) or 'all' to use all models:  all\n"
